# yeahscience

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  nginx.conf  pyproject.toml
prompts/: filter.txt  summary.txt
scripts/: build.sh  run-app.sh
yeahscience/: log.py  model.py
